Fix dark mode bug

--- a/src/app/daftar/daftar.module.css
+++ b/src/app/daftar/daftar.module.css
@@ -71,6 +71,7 @@
   .input {
     border: 1px solid #008080;
     padding: 10px;
+    background-color: white;
     margin-bottom: 15px;
     border-radius: 5px;
     width: 100%;
@@ -136,6 +137,7 @@
 .login {
     margin-top: 50px;
     text-align: center;
+    color: black;
     padding-bottom: 15px;
 }
   
@@ -148,6 +150,7 @@
 .lanjutkan {
     text-align: center;
     font-size: big;
+    color: black;
     padding-bottom: 20px;
 }
   
@@ -158,82 +161,3 @@
 .twitterLogo {
   transition: filter 0.3s ease;
 }
-
-  @media (prefers-color-scheme: dark) {
-    .roleSelection button:hover,
-    .roleSelection button:focus {
-        background-color: #004c4d;
-        color: white;
-    }
-
-    .daftar {
-        background-color: #008080;
-        color: white;
-        border: 3px #008080;
-        padding: 10px;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-top: 20px;
-        width: 100%;
-      }
-
-      .label {
-        margin-top: 10px;
-        padding-bottom: 5px;
-        color: #008080;
-        font-weight: 600;
-      }
-
-      .form {
-        position: absolute;
-        right: 0;
-        width: 400px;
-        height: 100%;
-        padding: 50px;
-        display: flex;
-        flex-direction: column;
-        background-color: rgba(17, 17, 17, 0.8);
-        backdrop-filter: blur(5px);
-        z-index: 2;
-        transition: transform 0.3s;
-        overflow-y: auto;
-      }
-
-      .daftar {
-        background-color: #004c4d;
-        color: white;
-        border: 3px #008080;
-        padding: 10px;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-top: 20px;
-        width: 100%;
-    }
-
-      .selamat h1 {
-        color: white;
-        margin-bottom: 5px;
-        text-align: center;
-        font-size: 20px;
-    }
-    
-    .selamat h3 {
-        color: #fff;
-        font-weight: normal;
-        margin-top: 0;
-        text-align: center;
-        font-size: 15px;
-    }
-
-    .background img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        filter: brightness(0.6);
-    }
-
-    .twitterLogo {
-      filter: invert(1) brightness(100%) contrast(100%);
-    }
-  }
-  
